# dobot

./: .copier-answers.yml  .coverage-tmp.html  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  duties.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
changelog/: index.html
code_of_conduct/: index.html
config/: pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
credits/: index.html
docs/.overrides/partials/: comments.html
docs/reference/: api.md
license/: index.html
reference/api/: index.html
scripts/: gen_credits.py
search/: search_index.json
src/dobot/: __init__.py  __main__.py  controller.py  robot.py
tests/: __init__.py  test_api.py  test_cli.py
