# -----------------------------------------------------------------------------
# Build System
# -----------------------------------------------------------------------------

[build-system]
requires = ["hatchling>=1.24.2", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/dobot"]

[tool.hatch.build.targets.wheel]
packages = ["src/dobot"]

[tool.hatch.build.targets.binary]
packages = ["src/dobot"]

# -----------------------------------------------------------------------------
# Project Metadata
# -----------------------------------------------------------------------------

[project.scripts]
robot = "dobot.robot:main"
controller = "dobot.controller:main"

[project]
name = "dobot"
version = "0.1.0"
description = "Robot project."
readme = "README.md"
authors = [{ name = "Kety Vagenfeld", email = "ketyvagenfeld@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = ["uv", "opencv-python"]

[project.urls]
Homepage = "https://ketyvagenfeld.github.io/dobot"
Documentation = "https://ketyvagenfeld.github.io/dobot"
Changelog = "https://ketyvagenfeld.github.io/dobot/changelog"
Repository = "https://github.com/ketyvagenfeld/dobot"
Issues = "https://github.com/ketyvagenfeld/dobot/issues"
Discussions = "https://github.com/ketyvagenfeld/dobot/discussions"
Gitter = "https://gitter.im/dobot/community"
Funding = "https://github.com/sponsors/ketyvagenfeld"

[dependency-groups]
maintain = [
    "uv",
    "build>=1.2",
    "git-changelog>=2.5",
    "twine>=5.1",
    "yore>=0.3.3",
    "pre-commit",
]
ci = [
    "duty>=1.6",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",
]
docs = [
    "mkdocs>=1.6",
    "zensical>=0.0.5",
    "mkdocs-coverage>=1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-llmstxt>=0.2",
    "mkdocs-material>=9.5",
    "markdown-exec>=1.8",
    "markdown-callouts>=0.4",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.29",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
]

[tool.uv]
package = true
managed = true
default-groups = ["maintain", "ci", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
